fix: adjust initial panel position to only show header

--- a/public/client.html
+++ b/public/client.html
@@ -36,7 +36,7 @@
             border-top-left-radius: 16px;
             border-top-right-radius: 16px;
             box-shadow: 0 -4px 12px rgba(0, 0, 0, 0.15);
-            transform: translateY(calc(100% - 80px)); /* Start mostly hidden, showing header */
+            transform: translateY(calc(100% - 65px)); /* Adjusted to only show header */
         }
         #list-panel.open {
             transform: translateY(0);
