--- a/public/client.html
+++ b/public/client.html
@@ -119,10 +119,11 @@
         }
         #qr-code-container {
             position: absolute;
-            bottom: 20px;
+            bottom: 70px; /* Positioned just above the collapsed panel */
             left: 20px;
             z-index: 10;
             cursor: pointer;
+            transition: opacity 0.3s ease;
         }
         #qr-code-container img {
             width: 50px;
