fix: hide detail panel shadow when closed

--- a/public/client.html
+++ b/public/client.html
@@ -106,7 +106,7 @@
         #detail-panel {
             height: 80vh; /* Changed from 100vh */
             z-index: 3;
-            transform: translateY(100%);
+            transform: translateY(102%); /* Move further down to hide shadow */
             border-top-left-radius: 16px;
             border-top-right-radius: 16px;
             box-shadow: 0 -4px 12px rgba(0, 0, 0, 0.15);
